--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@skeletonlabs/skeleton": "^2.8.0",
+		"@skeletonlabs/tw-plugin": "^0.3.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"@types/node": "^20.11.16",
 		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.31",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
+		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.5",
+		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
@@ -32,7 +37,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@iconify/svelte": "^3.1.6",
+		"chalk": "^5.3.0",
+		"dotenv": "^16.4.1",
 		"nvm": "^0.0.4",
-		"svelvet": "^9.0.0"
+		"svelvet": "^9.0.0",
+		"zod": "^3.22.4",
+		"zod-form-data": "^2.0.2"
 	}
 }
